# Beginner-s-Code

./: .gitignore  Artificial Neural Network.py  a.out  cpp.out
c/: .os.c.swp  AddNodeBiginLinkedList.c  AddNodeToLast.c  DLL1.c  a.out  os.c  receiver.c  sender.c  sender.out
c++/: a.out  crypto_demo  stlCPP.cpp
c++/basicLogic/: ASCIIvalues.cpp  AddNodeBiginLinkedList.cpp  DSAA1.cpp  NULLpointer.cpp  OS_lab2.cpp  PRB.singleNumber  PRB.singleNumber.cpp  RSAdecryption.cpp  RSAencryption.cpp  WayTooLongWords.cpp  aboutints.cpp  addressOfOperator.cpp  aplhabets.cpp  array1.cpp  arrayLeak.cpp  binToDec.cpp  binarySearch2.cpp  binarySearchAlg.cpp  bitPowerOf2.cpp  bitwiseANDgraph.cpp  bookAllocation.cpp  bubbleSortAlgo.cpp  charArray.cpp  classTemplate.cpp  dereferanceOperator.cpp  indexing.cpp  insertionSort.cpp  intersextionOf2Arrays.cpp  istream_.cpp  linearSearch.cpp  linearSearchVecter.cpp  linedListDSAA.cpp  linkedlist.cpp  normal.cpp  olympiadDate.cpp  opps.cpp  passByRefferance.cpp  pointerCon  pointerCon.cpp  powx-n.cpp  (+21 more)
c++/dsa2/: Boilerplate.cpp  Pattern.cpp  Pattern2.cpp  a.out  add.cpp  binarry.cpp  calculator.cpp  (+32 more)
c++/rough/keyboard-stream/: CMakeLists.txt  keyboard_stream  keyboard_stream.cpp  keyboard_stream.py
c++/rough/keyboard-stream/keyboard_env/: pyvenv.cfg
dev/: AI.css  GPTgeminiFromDeepsheek.html  Home.css  Home.html  Home.js  Sofi - Sofi.html  domelinkw2.html  domlinkhome.html  erase.html  erase.js  erase.tsx  index1.html  index2.html  index3.html  ollama_gemma_chat.html  rough.html  scroll.html  style3.css
py/: a.out  asyncProgramm1.py
(+183 files in other folders)
